src/examples/test-doubles/MockBuilderExampleTest.php.out
./tools/phpunit tests/MockBuilderExampleTest.php
PHPUnit 12.0-g4d6a8c6f1e by Sebastian Bergmann and contributors.

Runtime:       PHP 8.4.1

E                                                                   1 / 1 (100%)

Time: 00:00, Memory: 23.21 MB

There was 1 error:

1) MockBuilderExampleTest::testStub
Error: Call to undefined method PHPUnit\Framework\MockObject\MockBuilder::disableArgumentCloning()

/path/to/tests/MockBuilderExampleTest.php:12

ERRORS!
Tests: 1, Assertions: 0, Errors: 1.
